--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,24 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/test.svg
     - assets/test.png
+    - assets/splash.png
+
+    - assets/apartment.svg
+    - assets/house.svg
+    - assets/commerce.svg
+    - assets/industry.svg
+    - assets/special.svg
+
+    - assets/test_profile.png
+    - assets/test_house.png
+    - assets/test_house2.png
+    - assets/test_house3.png
+
+    - assets/youtube.png
+    - assets/instagram.png
+    - assets/facebook.png
+    - assets/image.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
